--- a/assets/journaled.ui.css
+++ b/assets/journaled.ui.css
@@ -100,6 +100,8 @@ input[type="submit"]:hover {
 .journalContentText {
     text-align: left;
     margin-top: 50px;
+    overflow-y: scroll;
+    max-height: 50vh;
 }
 
 .journalContentTextContainer {
